<resources>
    <string name="app_name">Health Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="exercise_diary_link">Exercise Diary</string>
    <string name="exercise_add_button">Add to Diary</string>
    <string name="exercise_add_title">Exercise Title</string>
    <string name="exercise_add_sets">Number of Sets</string>
    <string name="exercise_add_reps">Number of Reps</string>
    <string name="exercise_add_description">Exercise Description</string>
    <string name="user_prefs_file" translatable="false">prefs-file</string>
    <string name="rest_api_url" translatable="false">https://health-tracker-401d3.herokuapp.com/</string>
    <string name="exercise_list_label">Exercises</string>
    <string name="tap_exercise_button" >Tap!</string>
    <string name="button_back">Back</string>
</resources>
